transition on hover & fokus

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!--Навігаційний заголовок-->
+    <!--Navigation header-->
+
     <header class="header">
       <div class="container navigation-tools">
         <nav class="navigation">
@@ -442,5 +443,11 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal window-->
+
+    <div class="backdrop"></div>
+    <div class="modal"></div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
