--- a/portfolio.html
+++ b/portfolio.html
@@ -87,12 +87,21 @@
         <ul class="app-collection">
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/banking.jpg"
-                alt="inerface of banking App"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/banking.jpg"
+                  alt="inerface of banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="img-title">
                 <h2 class="filter-title">Banking App Interface Concept</h2>
@@ -100,14 +109,25 @@
               </div>
             </a>
           </li>
+
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/paymant.jpg"
-                alt="hand with mobile fone"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/paymant.jpg"
+                  alt="hand with mobile fone"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="img-title">
                 <h2 class="filter-title">Cashless Payment</h2>
                 <p class="filter-text">Marketing</p>
@@ -116,12 +136,22 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/meditation.jpg"
-                alt="Computer monitor"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/meditation.jpg"
+                  alt="Computer monitor"
+                  width="360"
+                  height="300"
+                />
+
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="img-title">
                 <h2 class="filter-title">Meditaion App</h2>
                 <p class="filter-text">App</p>
@@ -130,12 +160,21 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/taxi.jpg"
-                alt="hands on the wheel"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/taxi.jpg"
+                  alt="hands on the wheel"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="img-title">
                 <h2 class="filter-title">Taxi Service</h2>
                 <p class="filter-text">Marketing</p>
@@ -144,12 +183,21 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/screen.jpg"
-                alt="mobile fone screen"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/screen.jpg"
+                  alt="mobile fone screen"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="img-title">
                 <h2 class="filter-title">Screen Illustrations</h2>
                 <p class="filter-text">Design</p>
@@ -158,12 +206,22 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/online-courses.jpg"
-                alt="girl in orange pullower"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/online-courses.jpg"
+                  alt="girl in orange pullower"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="img-title">
                 <h2 class="filter-title">Online Courses</h2>
                 <p class="filter-text">Marketing</p>
@@ -172,12 +230,22 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/instagram.jpg"
-                alt="instagram screens"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/instagram.jpg"
+                  alt="instagram screens"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="img-title">
                 <h2 class="filter-title">Instagram Stories Concept</h2>
                 <p class="filter-text">Design</p>
@@ -186,12 +254,22 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/organic-food.jpg"
-                alt="bag with food in womans hands"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/organic-food.jpg"
+                  alt="bag with food in womans hands"
+                  width="360"
+                  height="300"
+                />
+
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="img-title">
                 <h2 class="filter-title">Organic Food</h2>
                 <p class="filter-text">Web Site</p>
@@ -200,12 +278,22 @@
           </li>
           <li class="collection-img">
             <a href="" class="portfolio-link">
-              <img
-                src="./images-portfolio/coffe.jpg"
-                alt="cup of capuccino"
-                width="360"
-                height="300"
-              />
+              <div class="wrapper">
+                <img
+                  src="./images-portfolio/coffe.jpg"
+                  alt="cup of capuccino"
+                  width="360"
+                  height="300"
+                />
+
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="img-title">
                 <h2 class="filter-title">Fresh Coffee</h2>
                 <p class="filter-text">Web Site</p>
