--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button type="button" class="button primary">Order Service</button>
+        <button class="button primary" data-modal-open type="button">
+          Order Service
+        </button>
       </section>
 
       <!--Privileges-->
@@ -446,8 +448,15 @@
 
     <!-- Modal window-->
 
-    <div class="backdrop"></div>
-    <div class="modal"></div>
+    <div class="backdrop is-hidden" data-modal></div>
+    <div class="modal">
+      <button data-modal-close class="modal-btn" type="button">
+        <svg class="modal-icon" width="24" height="24">
+          <use href="./images/icons.svg#icon-close-black"></use>
+        </svg>
+      </button>
+    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
