added sectiov to main

--- a/index.html
+++ b/index.html
@@ -347,55 +347,55 @@
           </ul>
         </div>
       </section>
-    </main>
 
-    <section class="section customers container">
-      <h2 class="section-title">Customers</h2>
-      <ul class="customers-list">
-        <li class="customers-icons">
-          <a href="" class="customers-icons-link">
-            <svg class="customers-logo" width="104" height="56">
-              <use href="./images/icons.svg#icon-ya"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="customers-icons">
-          <a href="" class="customers-icons-link">
-            <svg class="customers-logo" width="104" height="56">
-              <use href="./images/icons.svg#icon-tag"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="customers-icons">
-          <a href="" class="customers-icons-link">
-            <svg class="customers-logo" width="104" height="56">
-              <use href="./images/icons.svg#icon-company"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="customers-icons">
-          <a href="" class="customers-icons-link">
-            <svg class="customers-logo" width="104" height="56">
-              <use href="./images/icons.svg#icon-foster"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="customers-icons">
-          <a href="" class="customers-icons-link">
-            <svg class="customers-logo" width="104" height="56">
-              <use href="./images/icons.svg#icon-brand"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="customers-icons">
-          <a href="" class="customers-icons-link">
-            <svg class="customers-logo" width="104" height="56">
-              <use href="./images/icons.svg#icon-line"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </section>
+      <section class="section customers container">
+        <h2 class="section-title">Customers</h2>
+        <ul class="customers-list">
+          <li class="customers-icons">
+            <a href="" class="customers-icons-link">
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#icon-ya"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a href="" class="customers-icons-link">
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#icon-tag"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a href="" class="customers-icons-link">
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#icon-company"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a href="" class="customers-icons-link">
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#icon-foster"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a href="" class="customers-icons-link">
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#icon-brand"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="customers-icons">
+            <a href="" class="customers-icons-link">
+              <svg class="customers-logo" width="104" height="56">
+                <use href="./images/icons.svg#icon-line"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!-- Footer-->
 
@@ -448,13 +448,14 @@
 
     <!-- Modal window-->
 
-    <div class="backdrop is-hidden" data-modal></div>
-    <div class="modal">
-      <button data-modal-close class="modal-btn" type="button">
-        <svg class="modal-icon" width="24" height="24">
-          <use href="./images/icons.svg#icon-close-black"></use>
-        </svg>
-      </button>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
     </div>
 
     <script src="./js/modal.js"></script>
