--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navigation header-->
 
-    <header class="header">
+    <header class="header current">
       <div class="container navigation-tools">
         <nav class="navigation">
           <a class="logo navigation-tools" href="./index.html"
