--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Navigation header-->
 
-    <header class="header current">
+    <header class="header">
       <div class="container navigation-tools">
         <nav class="navigation">
           <a class="logo navigation-tools" href="./index.html"
@@ -31,17 +31,17 @@
 
           <ul class="navigation list">
             <li class="navigation-item">
-              <a class="navigation-link link active" href="./index.html"
+              <a class="current navigation-link link active" href="./index.html"
                 >Studio</a
               >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link link" href="./portfolio.html"
+              <a class="navigation-link link current" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link link" href="">Contacts</a>
+              <a class="navigation-link link current" href="">Contacts</a>
             </li>
           </ul>
         </nav>
