--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
           <ul class="navigation list">
             <li class="navigation-item">
-              <a class="current navigation-link link active" href="./index.html"
+              <a class="navigation-link link active current" href="./index.html"
                 >Studio</a
               >
             </li>
@@ -183,37 +183,38 @@
               <div class="team-frame">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-position">Product Designer</p>
+
+                <ul class="team-social">
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social">
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="team-img">
               <img
@@ -226,37 +227,38 @@
               <div class="team-frame">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-position">Frontend Developer</p>
+
+                <ul class="team-social">
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social">
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="team-img">
               <img
@@ -269,37 +271,38 @@
               <div class="team-frame">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-position">Marketing</p>
+
+                <ul class="team-social">
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social">
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="team-img">
               <img
@@ -312,37 +315,38 @@
               <div class="team-frame">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-position">UI Designer</p>
+
+                <ul class="team-social">
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-apps">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="team-social">
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-apps">
-                  <a href="" class="social-link">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
