--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
               >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link link current" href="./portfolio.html"
+              <a class="navigation-link link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link link current" href="">Contacts</a>
+              <a class="navigation-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -68,9 +68,7 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button class="button primary" data-modal-open type="button">
-          Order Service
-        </button>
+        <button class="button primary" type="button">Order Service</button>
       </section>
 
       <!--Privileges-->
@@ -451,17 +449,6 @@
     </footer>
 
     <!-- Modal window-->
-
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <button class="modal-btn" type="button" data-modal-close>
-          <svg class="modal-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-close-black"></use>
-          </svg>
-        </button>
-      </div>
-    </div>
-
-    <script src="./js/modal.js"></script>
+    <script></script>
   </body>
 </html>
