--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
           <ul class="navigation list">
             <li class="navigation-item">
-              <a class="navigation-link link active current" href="./index.html"
+              <a class="navigation-link link active" href="./index.html"
                 >Studio</a
               >
             </li>
@@ -68,7 +68,9 @@
           Effective Solutions <br />
           for Your Business
         </h1>
-        <button class="button primary" type="button">Order Service</button>
+        <button class="button primary" type="button" data-modal-open>
+          Order Service
+        </button>
       </section>
 
       <!--Privileges-->
@@ -449,6 +451,100 @@
     </footer>
 
     <!-- Modal window-->
-    <script></script>
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-icon-close" width="16" height="16">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <form
+          class="modal-form"
+          name="madal_form"
+          novalidate
+          autocomplete="on"
+          method="post"
+        >
+          <div class="form-title">
+            <strong class=""
+              >Leave your contacts and we will call you back</strong
+            >
+          </div>
+          <div class="modal-group">
+            <label class="label-name" for="user_name">Name</label>
+            <div class="modal-wrapper">
+              <input
+                class="modal-input"
+                type="text"
+                minlength="3"
+                required
+                name="user_name"
+                id="user_name"
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-group">
+            <label class="label-name" for="user_phone">Phone</label>
+            <div class="modal-wrapper">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user_phone"
+                id="user_phone"
+              />
+
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-group">
+            <label class="label-name" for="user_email">Email</label>
+            <div class="modal-wrapper">
+              <input
+                class="modal-input"
+                type="email"
+                name="user_email"
+                id="user_email"
+              />
+
+              <svg class="modal-icon" width="20" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-group">
+            <label class="label-name" for="comment">Comment</label>
+            <textarea
+              class="modal-comments size-none"
+              name="comment"
+              id="comment"
+              rows="5"
+            >
+Text input</textarea
+            >
+          </div>
+          <div class="modal-chekbox">
+            <input
+              class="modal-chekbox-input visually-hidden"
+              type="checkbox"
+              id="checkbox"
+            />
+            <label class="label-name modal-chekbox-label" for="checkbox">
+              <span class="modal-chekbox-custom">
+                <svg class="modal-chekbox-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg> </span
+              >I accept the terms and conditions of the</label
+            ><a class="accent-policy" href="">Privacy Policy</a>
+          </div>
+          <button class="submit-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
