--- a/index.html
+++ b/index.html
@@ -352,52 +352,54 @@
         </div>
       </section>
 
-      <section class="section customers container">
-        <h2 class="section-title">Customers</h2>
-        <ul class="customers-list">
-          <li class="customers-icons">
-            <a href="" class="customers-icons-link">
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#icon-ya"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-icons">
-            <a href="" class="customers-icons-link">
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#icon-tag"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-icons">
-            <a href="" class="customers-icons-link">
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#icon-company"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-icons">
-            <a href="" class="customers-icons-link">
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#icon-foster"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-icons">
-            <a href="" class="customers-icons-link">
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#icon-brand"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="customers-icons">
-            <a href="" class="customers-icons-link">
-              <svg class="customers-logo" width="104" height="56">
-                <use href="./images/icons.svg#icon-line"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <section class="section customers">
+        <div class="container">
+          <h2 class="section-title">Customers</h2>
+          <ul class="customers-list">
+            <li class="customers-icons">
+              <a href="" class="customers-icons-link">
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#icon-ya"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons">
+              <a href="" class="customers-icons-link">
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#icon-tag"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons">
+              <a href="" class="customers-icons-link">
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons">
+              <a href="" class="customers-icons-link">
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#icon-foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons">
+              <a href="" class="customers-icons-link">
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons">
+              <a href="" class="customers-icons-link">
+                <svg class="customers-logo" width="104" height="56">
+                  <use href="./images/icons.svg#icon-line"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
