--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
     </footer>
 
     <!-- Modal window-->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon-close" width="16" height="16">
